[gd_scene load_steps=6 format=2]

[ext_resource path="res://scr/Grid.gd" type="Script" id=1]
[ext_resource path="res://scr/Control.gd" type="Script" id=2]
[ext_resource path="res://scr/Main.gd" type="Script" id=4]
[ext_resource path="res://spr/poke1.png" type="Texture" id=5]
[ext_resource path="res://scn/Hold.gd" type="Script" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Grid" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 1 )

[node name="Hold" type="Panel" parent="Grid"]
margin_left = 23.7093
margin_top = 123.0
margin_right = 114.709
margin_bottom = 214.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Grid/Hold"]
margin_left = 24.5038
margin_top = 97.0197
margin_right = 64.5038
margin_bottom = 111.02
text = "Hold"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tes" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 109.282, 19.0184 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Panel" parent="Control"]
margin_right = 133.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="Control/Score"]
margin_left = 1.0
margin_right = 132.0
margin_bottom = 40.0
text = "Score:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="Label" parent="Control/Score"]
margin_left = 1.0
margin_top = 1.0
margin_right = 132.0
margin_bottom = 39.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Panel" parent="Control"]
margin_left = 523.0
margin_right = 600.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="Control/Level"]
margin_left = 2.32257
margin_right = 69.3226
margin_bottom = 40.0
text = "Level:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="Label" parent="Control/Level"]
margin_right = 58.0
margin_bottom = 40.0
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="Panel" parent="Control"]
margin_left = 514.924
margin_top = 760.0
margin_right = 600.924
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesText" type="Label" parent="Control/Lines"]
margin_left = 2.92395
margin_top = 14.6197
margin_right = 42.924
margin_bottom = 28.6197
text = "Lines:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesNumber" type="Label" parent="Control/Lines"]
margin_left = 42.8844
margin_top = 13.6451
margin_right = 82.8844
margin_bottom = 27.6451
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Control"]
show_behind_parent = true
margin_left = 139.0
margin_top = 108.0
margin_right = 460.0
margin_bottom = 770.0
border_color = Color( 0, 0, 0, 1 )
border_width = 5.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/ReferenceRect"]
show_behind_parent = true
light_mask = 0
margin_right = 322.0
margin_bottom = 662.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="level_change" from="Grid" to="Control" method="_on_Grid_level_change"]
[connection signal="lines_change" from="Grid" to="Control" method="_on_Grid_lines_change"]
[connection signal="score_change" from="Grid" to="Control" method="_on_Grid_score_change"]
